# AugurOmega-MidBuild

./: .gitattributes  .gitignore  README.md  augur_omega_strategic_enhancement_report.md  demo_file_access.md
augur-omega/: .env  ACTIVATION_SHORTCUTS.md  Activate_Augur_Omega_Agents.desktop  AugurOmega.spec  BUILD_README.md  BUILD_SUMMARY.md  BUILD_SYSTEM.md  Dockerfile.backend  Dockerfile.build  EXPANSION_SUMMARY.md  FINAL_BUILD_COMPLETION_REPORT.md  MASTER_ACTIVATE_ALL_PLATFORMS.bat  MULTI_PLATFORM_BUILDS_SUMMARY.md  ONNX_ENHANCEMENT_REPORT.json  PROJECT_COMPLETION_CERTIFICATION.md  README.md  SYSTEM_ACTIVATION_PREVIEW.md  VERIFY_ALL_BUILDS.bat  activate_agents.bat  activate_agents_permanent.bat  activate_all_platforms.bat  activate_all_platforms_clean.bat  activate_persistent_agents.ps1  advanced_build_orchestrator.py  agent_status.bat  augur-omega.spec  augur_kickstart.ps1  augur_kickstart.sh  augur_orchestrate.py  augur_phase2.py  build.py  build_config.toml  build_executables_fixed.py  build_orchestrator.py  build_runner.bat  build_runner.sh  build_system.py  build_system_complete.py  build_system_enhanced.py  complete_build_system.py  (+15 more)
augur-omega/.build_temp/tauri_build/: Cargo.toml
augur-omega/.build_temp/tauri_build/src/: index.html
augur-omega/builds/tauri/: Cargo.toml  tauri.conf.json
augur-omega/builds/tauri/project/: tauri.conf.json
augur-omega/builds/tauri/src/: index.html
docs/: jivaslokam_research_plan.md  phase1_revolutionary_analysis.md  rasoom_implementation_plan.md  research_plan_agent_orchestration.md  research_plan_tremors.md  (+3 more)
(+3569 files in other folders)
