
[package]
name = "augur-omega"
version = "1.0.0"
description = "Advanced AI Business Automation Platform"
authors = ["Augur Omega AI"]
license = "MIT"
repository = "https://github.com/auguromega/augur-omega"
default-run = "augur-omega"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
                